--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <!-- HEADER -->
     <header class="hdr">
       <div class="hdr-container container">
-        <a class="logo link" lang="en" href="./index.html">
-          <span class="logo-web">Web</span>Studio
+        <a class="logo link" lang="en" href="./index.html"
+          ><span class="logo-web">Web</span>Studio
         </a>
         <nav class="navigation">
           <ul class="menu list">
