--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,17 @@
   </head>
   <body>
     <header class="hdr">
-      <div class="container">
-        <a class="logo link" lang="en" href="./index.html">
-          <span class="logo-web">Web</span>Studio
+      <div class="hdr-container container">
+        <a class="logo link" lang="en" href="./index.html"
+          ><span class="logo-web">Web</span>Studio
         </a>
         <nav class="navigation">
           <ul class="menu list">
             <li class="menu-item">
-              <a class="menu-link link" href="./index.html">Студия</a>
+              <a class="menu-link current link" href="./index.html">Студия</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link current link" href="./portfolio.html"
-                >Портфолио</a
-              >
+              <a class="menu-link link" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="#">Контакты</a>
