--- a/index.html
+++ b/index.html
@@ -39,12 +39,17 @@
         </nav>
         <ul class="contact list">
           <li class="contact-item contact-mail">
-            <a class="mail-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="mail-link link" href="mailto:info@devstudio.com">
+              <svg class="mail-icon icon" width="16px" height="12px">
+                <use href="./images/icons.svg#mail-icon"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="contact-item contact-tel">
-            <a class="tel-link link" href="tel:+380961111111"
+            <a class="tel-link link" href="tel:+380961111111">
+              <svg class="tel-icon icon" width="10px" height="16px">
+                <use href="./images/icons.svg#tel-icon"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -67,6 +72,11 @@
           <h2 class="features-title">Наши особенности</h2>
           <ul class="features-list list">
             <li class="features-item">
+              <div class="container-icon">
+                <svg class="features-svg" width="70px" height="70px">
+                  <use href="./images/icons.svg#antena"></use>
+                </svg>
+              </div>
               <h3 class="list-title">Внимание к деталям</h3>
               <p class="list-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -74,6 +84,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="container-icon">
+                <svg class="features-svg" width="70px" height="70px">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="list-title">Пунктуальность</h3>
               <p class="list-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -81,6 +96,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="container-icon">
+                <svg class="features-svg" width="70px" height="54px">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="list-title">Планирование</h3>
               <p class="list-text">
                 Равным образом консультация с широким активом в значительной
@@ -88,6 +108,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="container-icon">
+                <svg class="features-svg" width="70px" height="70px">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="list-title">Современные технологии</h3>
               <p class="list-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -148,6 +173,52 @@
               <div class="employee-data">
                 <h3 class="commands-name">Игорь Демьяненко</h3>
                 <p lang="en" class="commands-position">Product Designer</p>
+                <ul class="social-list commands-list list">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="http://www.instagram.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">instagram</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">twitter</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">facebook</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://ua.linkedin.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">linkedin</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="commands-item">
@@ -160,6 +231,52 @@
               <div class="employee-data">
                 <h3 class="commands-name">Ольга Репина</h3>
                 <p lang="en" class="commands-position">Frontend Developer</p>
+                <ul class="social-list commands-list list">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="http://www.instagram.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">instagram</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">twitter</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">facebook</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://ua.linkedin.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">linkedin</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="commands-item">
@@ -173,6 +290,52 @@
               <div class="employee-data">
                 <h3 class="commands-name">Николай Тарасов</h3>
                 <p lang="en" class="commands-position">Marketing</p>
+                <ul class="social-list commands-list list">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="http://www.instagram.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">instagram</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">twitter</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">facebook</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://ua.linkedin.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">linkedin</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="commands-item">
@@ -186,7 +349,103 @@
               <div class="employee-data">
                 <h3 class="commands-name">Михаил Ермаков</h3>
                 <p lang="en" class="commands-position">UI Designer</p>
+                <ul class="social-list commands-list list">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="http://www.instagram.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">instagram</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">twitter</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">facebook</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://ua.linkedin.com"
+                      target="_blank"
+                      rel="noopener nofollow"
+                      ><span class="social-name">linkedin</span>
+                      <svg class="social-svg" width="44px" height="44px">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- CLIENTS -->
+      <section class="section clients">
+        <div class="container">
+          <h2 class="clients-title title">Постоянные клиенты</h2>
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <a href="#" class="clients-link">
+                <svg class="clients-svg" width="41" height="47">
+                  <use href="./images/icons.svg#yaco"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#" class="clients-link">
+                <svg class="clients-svg" width="40" height="52">
+                  <use href="./images/icons.svg#company2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#" class="clients-link">
+                <svg class="clients-svg" width="43" height="41">
+                  <use href="./images/icons.svg#company3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#" class="clients-link">
+                <svg class="clients-svg" width="84" height="41">
+                  <use href="./images/icons.svg#foster"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#" class="clients-link">
+                <svg class="clients-svg" width="63" height="45">
+                  <use href="./images/icons.svg#brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#" class="clients-link">
+                <svg class="clients-svg" width="94" height="44">
+                  <use href="./images/icons.svg#company6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
