--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,12 @@
         <nav class="navigation">
           <ul class="menu list">
             <li class="menu-item">
-              <a class="menu-link current link" href="./index.html">Студия</a>
+              <a class="menu-link link" href="./index.html">Студия</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link link" href="./portfolio.html">Портфолио</a>
+              <a class="menu-link current link" href="./portfolio.html"
+                >Портфолио</a
+              >
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="#">Контакты</a>
@@ -38,12 +40,17 @@
         </nav>
         <ul class="contact list">
           <li class="contact-item contact-mail">
-            <a class="mail-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="mail-link link" href="mailto:info@devstudio.com">
+              <svg class="mail-icon icon" width="16px" height="12px">
+                <use href="./images/icons.svg#mail-icon"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="contact-item contact-tel">
-            <a class="tel-link link" href="tel:+380961111111"
+            <a class="tel-link link" href="tel:+380961111111">
+              <svg class="tel-icon icon" width="10px" height="16px">
+                <use href="./images/icons.svg#tel-icon"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
