--- a/portfolio.html
+++ b/portfolio.html
@@ -208,33 +208,84 @@
       </section>
     </main>
     <footer class="basement">
-      <div class="container">
-        <a lang="en" href="./index.html" class="logo link dark-theme">
-          <span class="logo-web">Web</span>Studio
-        </a>
-        <address class="cnt">
-          <ul class="cnt-address list">
-            <li class="item cnt-street">
+      <div class="container-basement container">
+        <div class="container-address">
+          <a lang="en" href="./index.html" class="logo link dark-theme">
+            <span class="logo-web">Web</span>Studio
+          </a>
+          <address class="cnt">
+            <ul class="cnt-address list">
+              <li class="item cnt-street">
+                <a
+                  class="cnt-link link"
+                  href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/"
+                  target="_blank"
+                  rel="noopener nofollow"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="item cnt-mail">
+                <a class="cnt-link link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="item cnt-tel">
+                <a class="cnt-link link" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="container-social">
+          <h2 class="social-title">Присоединяйтесь</h2>
+          <ul class="social-list list">
+            <li class="social-item social-ft-item">
               <a
-                class="cnt-link link"
-                href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/"
+                class="social-link social-ft-link"
+                href="http://www.instagram.com"
                 target="_blank"
                 rel="noopener nofollow"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+                ><span class="social-name">instagram</span>
+                <svg class="social-ft-svg" width="44px" height="44px">
+                  <use href="./images/icons.svg#instagram"></use></svg
+              ></a>
             </li>
-            <li class="item cnt-mail">
-              <a class="cnt-link link" href="mailto:info@example.com"
-                >info@example.com</a
-              >
+            <li class="social-item social-ft-item">
+              <a
+                class="social-link social-ft-link"
+                href="https://twitter.com"
+                target="_blank"
+                rel="noopener nofollow"
+                ><span class="social-name">twitter</span>
+                <svg class="social-ft-svg" width="44px" height="44px">
+                  <use href="./images/icons.svg#twitter"></use></svg
+              ></a>
             </li>
-            <li class="item cnt-tel">
-              <a class="cnt-link link" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
+            <li class="social-item social-ft-item">
+              <a
+                class="social-link social-ft-link"
+                href="https://www.facebook.com"
+                target="_blank"
+                rel="noopener nofollow"
+                ><span class="social-name">facebook</span>
+                <svg class="social-ft-svg" width="44px" height="44px">
+                  <use href="./images/icons.svg#facebook"></use></svg
+              ></a>
+            </li>
+            <li class="social-item social-ft-item">
+              <a
+                class="social-link social-ft-link"
+                href="https://ua.linkedin.com"
+                target="_blank"
+                rel="noopener nofollow"
+                ><span class="social-name">linkedin</span>
+                <svg class="social-ft-svg" width="44px" height="44px">
+                  <use href="./images/icons.svg#linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
