--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <div class="employee-data">
                 <h3 class="commands-name">Игорь Демьяненко</h3>
                 <p lang="en" class="commands-position">Product Designer</p>
-                <ul class="social-list commands-list list">
+                <ul class="social-list list">
                   <li class="social-item">
                     <a
                       class="social-link"
@@ -231,7 +231,7 @@
               <div class="employee-data">
                 <h3 class="commands-name">Ольга Репина</h3>
                 <p lang="en" class="commands-position">Frontend Developer</p>
-                <ul class="social-list commands-list list">
+                <ul class="social-list list">
                   <li class="social-item">
                     <a
                       class="social-link"
@@ -349,7 +349,7 @@
               <div class="employee-data">
                 <h3 class="commands-name">Михаил Ермаков</h3>
                 <p lang="en" class="commands-position">UI Designer</p>
-                <ul class="social-list commands-list list">
+                <ul class="social-list list">
                   <li class="social-item">
                     <a
                       class="social-link"
@@ -485,7 +485,7 @@
         <div class="container-social">
           <h2 class="social-title">Присоединяйтесь</h2>
           <ul class="social-list list">
-            <li class="social-item social-ft-item">
+            <li class="social-item">
               <a
                 class="social-link social-ft-link"
                 href="http://www.instagram.com"
@@ -496,7 +496,7 @@
                   <use href="./images/icons.svg#instagram"></use></svg
               ></a>
             </li>
-            <li class="social-item social-ft-item">
+            <li class="social-item">
               <a
                 class="social-link social-ft-link"
                 href="https://twitter.com"
@@ -507,7 +507,7 @@
                   <use href="./images/icons.svg#twitter"></use></svg
               ></a>
             </li>
-            <li class="social-item social-ft-item">
+            <li class="social-item">
               <a
                 class="social-link social-ft-link"
                 href="https://www.facebook.com"
@@ -518,7 +518,7 @@
                   <use href="./images/icons.svg#facebook"></use></svg
               ></a>
             </li>
-            <li class="social-item social-ft-item">
+            <li class="social-item">
               <a
                 class="social-link social-ft-link"
                 href="https://ua.linkedin.com"
