--- a/portfolio.html
+++ b/portfolio.html
@@ -82,126 +82,144 @@
 
           <ul class="cards list">
             <li class="cards-item">
-              <img
-                src="./images/portfolio/websitetechnoqruack.jpg"
-                alt="фото проекта"
-                width="370"
-                height="294"
-              />
-              <div class="project-data">
-                <h3 class="cards-list-tile">Технокряк</h3>
-                <p class="cards-description">Веб-сайт</p>
-              </div>
+              <a href="#" class="cards-link link"
+                ><img
+                  src="./images/portfolio/websitetechnoqruack.jpg"
+                  alt="фото проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-data">
+                  <h3 class="cards-list-tile">Технокряк</h3>
+                  <p class="cards-description">Веб-сайт</p>
+                </div></a
+              >
             </li>
             <li class="cards-item">
-              <img
-                src="./images/portfolio/basketballdesign.jpg"
-                alt="фото проекта"
-                width="370"
-                height="294"
-              />
-              <div class="project-data">
-                <h3 class="cards-list-tile">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h3>
-                <p class="cards-description">Дизайн</p>
-              </div>
+              <a href="#" class="cards-link link">
+                <img
+                  src="./images/portfolio/basketballdesign.jpg"
+                  alt="фото проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-data">
+                  <h3 class="cards-list-tile">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h3>
+                  <p class="cards-description">Дизайн</p>
+                </div></a
+              >
             </li>
             <li class="cards-item">
-              <img
-                src="./images/portfolio/apprestaurant.jpg"
-                alt="фото проекта"
-                width="370"
-                height="294"
-              />
-              <div class="project-data">
-                <h3 class="cards-list-tile">
-                  Ресторан <span lang="en">Seafood</span>
-                </h3>
-                <p class="cards-description">Приложение</p>
-              </div>
+              <a href="#" class="cards-link link">
+                <img
+                  src="./images/portfolio/apprestaurant.jpg"
+                  alt="фото проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-data">
+                  <h3 class="cards-list-tile">
+                    Ресторан <span lang="en">Seafood</span>
+                  </h3>
+                  <p class="cards-description">Приложение</p>
+                </div></a
+              >
             </li>
             <li class="cards-item">
-              <img
-                src="./images/portfolio/marketingheadphones.jpg"
-                alt="фото проекта"
-                width="370"
-                height="294"
-              />
-              <div class="project-data">
-                <h3 class="cards-list-tile">
-                  Проект <span lang="en">Prime</span>
-                </h3>
-                <p class="cards-description">Маркетинг</p>
-              </div>
+              <a href="#" class="cards-link link">
+                <img
+                  src="./images/portfolio/marketingheadphones.jpg"
+                  alt="фото проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-data">
+                  <h3 class="cards-list-tile">
+                    Проект <span lang="en">Prime</span>
+                  </h3>
+                  <p class="cards-description">Маркетинг</p>
+                </div></a
+              >
             </li>
             <li class="cards-item">
-              <img
-                src="./images/portfolio/appboxes.jpg"
-                alt="фото проекта"
-                width="370"
-                height="294"
-              />
-              <div class="project-data">
-                <h3 class="cards-list-tile">
-                  Проект <span lang="en">Boxes</span>
-                </h3>
-                <p class="cards-description">Приложение</p>
-              </div>
+              <a href="#" class="cards-link link">
+                <img
+                  src="./images/portfolio/appboxes.jpg"
+                  alt="фото проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-data">
+                  <h3 class="cards-list-tile">
+                    Проект <span lang="en">Boxes</span>
+                  </h3>
+                  <p class="cards-description">Приложение</p>
+                </div></a
+              >
             </li>
             <li class="cards-item">
-              <img
-                src="./images/portfolio/websiteblack.jpg"
-                alt="фото проекта"
-                width="370"
-                height="294"
-              />
-              <div class="project-data">
-                <h3 class="cards-list-tile" lang="en">
-                  Inspiration has no Borders
-                </h3>
-                <p class="cards-description">Веб-сайт</p>
-              </div>
+              <a href="#" class="cards-link link">
+                <img
+                  src="./images/portfolio/websiteblack.jpg"
+                  alt="фото проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-data">
+                  <h3 class="cards-list-tile" lang="en">
+                    Inspiration has no Borders
+                  </h3>
+                  <p class="cards-description">Веб-сайт</p>
+                </div></a
+              >
             </li>
             <li class="cards-item">
-              <img
-                src="./images/portfolio/designlimited.jpg"
-                alt="фото проекта"
-                width="370"
-                height="294"
-              />
-              <div class="project-data">
-                <h3 class="cards-list-tile">
-                  Издание <span lang="en">Limited Edition</span>
-                </h3>
-                <p class="cards-description">Дизайн</p>
-              </div>
+              <a href="#" class="cards-link link">
+                <img
+                  src="./images/portfolio/designlimited.jpg"
+                  alt="фото проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-data">
+                  <h3 class="cards-list-tile">
+                    Издание <span lang="en">Limited Edition</span>
+                  </h3>
+                  <p class="cards-description">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="cards-item">
-              <img
-                src="./images/portfolio/marketinglab.jpg"
-                alt="фото проекта"
-                width="370"
-                height="294"
-              />
-              <div class="project-data">
-                <h3 class="cards-list-tile">
-                  Проект <span lang="en">LAB</span>
-                </h3>
-                <p class="cards-description">Маркетинг</p>
-              </div>
+              <a href="#" class="cards-link link">
+                <img
+                  src="./images/portfolio/marketinglab.jpg"
+                  alt="фото проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-data">
+                  <h3 class="cards-list-tile">
+                    Проект <span lang="en">LAB</span>
+                  </h3>
+                  <p class="cards-description">Маркетинг</p>
+                </div></a
+              >
             </li>
             <li class="cards-item">
-              <img
-                src="./images/portfolio/appgrowing.jpg"
-                alt="фото проекта"
-                width="370"
-                height="294"
-              />
-              <div class="project-data">
-                <h3 class="cards-list-tile" lang="en">Growing Business</h3>
-                <p class="cards-description">Приложение</p>
-              </div>
+              <a href="#" class="cards-link link">
+                <img
+                  src="./images/portfolio/appgrowing.jpg"
+                  alt="фото проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-data">
+                  <h3 class="cards-list-tile" lang="en">Growing Business</h3>
+                  <p class="cards-description">Приложение</p>
+                </div></a
+              >
             </li>
           </ul>
         </div>
@@ -240,7 +258,7 @@
         <div class="container-social">
           <h2 class="social-title">Присоединяйтесь</h2>
           <ul class="social-list list">
-            <li class="social-item social-ft-item">
+            <li class="social-item">
               <a
                 class="social-link social-ft-link"
                 href="http://www.instagram.com"
@@ -251,7 +269,7 @@
                   <use href="./images/icons.svg#instagram"></use></svg
               ></a>
             </li>
-            <li class="social-item social-ft-item">
+            <li class="social-item">
               <a
                 class="social-link social-ft-link"
                 href="https://twitter.com"
@@ -262,7 +280,7 @@
                   <use href="./images/icons.svg#twitter"></use></svg
               ></a>
             </li>
-            <li class="social-item social-ft-item">
+            <li class="social-item">
               <a
                 class="social-link social-ft-link"
                 href="https://www.facebook.com"
@@ -273,7 +291,7 @@
                   <use href="./images/icons.svg#facebook"></use></svg
               ></a>
             </li>
-            <li class="social-item social-ft-item">
+            <li class="social-item">
               <a
                 class="social-link social-ft-link"
                 href="https://ua.linkedin.com"
